Fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -138,7 +138,6 @@ textarea{
   #root{
     width: 70vw;
     margin: 0 auto;
-    overflow: hidden;
   }
 
   .container{
